# CryptoStockProject

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  dev.env  docker-compose.yaml  docker-compose.yml  pyproject.toml
cryptostock_api/: pyproject.toml
cryptostock_api/cryptostock/: Dockerfile  Dockerfile-k8s  pytest.ini  requirements.txt  run.sh
cryptostock_api/cryptostock/account/: admin.py  models.py  serializers.py  urls.py  views.py
cryptostock_api/cryptostock/account/migrations/: 0006_alter_account_cash_balance_squashed_0008_alter_purchasedashboard_count.py  0008_auto_20211217_1513.py  0009_auto_20211221_1555.py  0010_remove_account_telegram_chat_id.py  0010_remove_account_telegram_chat_id_squashed_0011_alter_salesdashboard_broker.py  0011_account_account_contacts_data.py  0011_alter_salesdashboard_broker.py  0012_auto_20220105_1538.py  0012_auto_20220106_0812.py  0013_auto_20220106_1353.py  0014_account_account_token.py  0015_alter_account_account_token.py
cryptostock_api/cryptostock/account/tests/: conftest.py  factory.py  test_create_offer.py  test_create_salesdashboard.py  test_get_list_offers.py  test_get_list_purchasedashboard.py  test_get_list_salesdashboard.py  test_get_offer.py  test_get_purchasedashboard.py  test_get_selesdasboard.py  test_jwt_auth.py  test_offer_total_value.py  test_update_salesdashboard.py
cryptostock_api/cryptostock/asset/migrations/: 0001_initial.py
cryptostock_api/cryptostock/celery_tasks/: broker_notification_tasks.py  client_notification_tasks.py  general_notification_tasks.py  periodic_broker_notification_handlers.py  schedule_tasks.py
cryptostock_api/cryptostock/cryptostock/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
cryptostock_api/cryptostock/market/: admin.py  models.py  views.py
cryptostock_api/cryptostock/market/tests/: test_buy_asset_from_market.py
cryptostock_api/cryptostock/notification/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
cryptostock_api/cryptostock/utils/: api_view_assistants.py  fields.py  jwt_views.py  swagger_views.py  validators.py
cryptostock_api/cryptostock/wallet/: admin.py  models.py  serializers.py
cryptostock_notification_services/: Dockerfile  pyproject.toml
cryptostock_notification_services/telegram_bot/: __main__.py  main.py
cryptostock_notification_services/vk_bot/: main.py
(+182 files in other folders)
