[tool.poetry]
name = "cryptostockproject"
version = "0.1.0"
description = ""
authors = ["aliaksei <liverpoolsmile23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"
coverage = "^6.1.2"
drf-yasg = "^1.20.0"
lxml = "^4.6.4"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
celery = "^5.2.1"
redis = "^4.0.2"
aiogram = "^2.17.1"
aioredis = "^2.0.0"
vkbottle = "^4.1.11"
django-cors-headers = "3.10.0"
django-health-check = "^3.16.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest-django = "^4.4.0"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
