[tool.poetry]
name = "cryptostock-notification-services"
version = "0.1.0"
description = "all services for notification"
authors = ["aliaksei <liverpoolsmile23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.0.2"
aiogram = "^2.17.1"
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
